src/snapshots/poly_tui__ui__tests__ui_failure.snap
---
source: src/ui.rs
expression: out
---
┌poly-tui──────────────────────────────────────────────────┐
│                       USDC: $100.00                      │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  refresh: 30s  last: failed (Netwo
