src/snapshots/poly_tui__ui__tests__ui_no_balance.snap
---
source: src/ui.rs
expression: out
---
┌poly-tui──────────────────────────────────────────────────┐
│                         USDC: --                         │
│                    Loading positions…                    │
│                                                          │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  refresh: 30s  last: --    q quit
