src/snapshots/poly_tui__ui__tests__ui_with_balance.snap
---
source: src/ui.rs
expression: out
---
┌poly-tui──────────────────────────────────────────────────┐
│                      USDC: $1,234.56                     │
│                    Loading positions…                    │
└──────────────────────────────────────────────────────────┘
 BTC: --                                                    
 Trader  not started — run `poly-trader`                    
                                                            
                                                            
                                                            
                                                            
                                                            
● CLOB  ● Redis  ● Trader  ● BTC  refresh: 30s  last: 12s ag
